# bevy_eventlistener

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: benchmarks.rs  event_listeners_bench.rs
bevy_eventlistener_derive/: Cargo.toml
bevy_eventlistener_derive/src/: lib.rs
crates/bevy_eventlistener_core/: Cargo.toml
crates/bevy_eventlistener_core/src/: callbacks.rs  event_dispatcher.rs  event_listener.rs  lib.rs
crates/bevy_eventlistener_derive/: Cargo.toml
crates/bevy_eventlistener_derive/src/: lib.rs
examples/: event_listeners.rs  minimal.rs  multiple_listeners.rs  stress_test.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: bubbling.rs  callbacks.rs  event_dispatcher.rs  event_listener.rs  lib.rs  listener_graph.rs  on_event.rs  plugin.rs
