[workspace]
members = ["macros"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "bevy_eventlistener"
version = "0.8.1"
edition = "2021"
description = "Event listeners and callbacks for bevy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aevyrie/bevy_eventlistener"
keywords = ["gamedev", "bevy", "eventlistener", "callbacks"]
categories = ["game-engines", "rendering"]

[dependencies]
bevy_eventlistener_derive = { path = "macros", version = "0.8.0" }
bevy_ecs = "0.14.0"
bevy_app = "0.14.0"
bevy_utils = "0.14.0"
bevy_hierarchy = "0.14.0"

[dev-dependencies]
bevy = { version = "0.14.0", default-features = false, features = [
    "bevy_winit",
    "x11",
] }
rand = "0.8"
criterion = "0.5"

[[bench]]
name = "benchmarks"
harness = false
