[package]
name = "bevy_eventlistener_core"
version = "0.4.1"
edition = "2021"
description = "Event listeners and callbacks for bevy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aevyrie/bevy_eventlistener"
keywords = ["gamedev", "bevy", "eventlistener", "callbacks"]
categories = ["game-engines", "rendering"]

[dependencies]
bevy = { version = "0.11", default-features = false }
