[package]
name = "bevy_eventlistener_core"
version = "0.5.1"
edition = "2021"
description = "Event listeners and callbacks for bevy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aevyrie/bevy_eventlistener"
keywords = ["gamedev", "bevy", "eventlistener", "callbacks"]
categories = ["game-engines", "rendering"]

[dependencies]
bevy_ecs = "0.11"
bevy_app = "0.11"
bevy_utils = "0.11"
bevy_hierarchy = "0.11"

[features]
default = ["trace"]
trace = []
