[package]
name = "bevy_eventlistener_derive"
version = "0.4.0"
edition = "2021"
description = "Event listeners and callbacks for bevy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aevyrie/bevy_eventlistener"
keywords = ["gamedev", "bevy", "eventlistener", "callbacks"]
categories = ["game-engines", "rendering"]

[lib]
proc-macro = true

[dependencies]
bevy_eventlistener_core = { path = "../bevy_eventlistener_core", version = "0.4.0" }
quote = "1"
syn = "2"
proc-macro2 = "1"
